@@ -1,3 +1,15 @@
+2011-08-12  Fady Samuel  <fsamuel@chromium.org>
+
+        Expose pageScaleFactor() to Chromium's WebViewImpl
+        https://bugs.webkit.org/show_bug.cgi?id=66067
+
+        Reviewed by Darin Fisher.
+
+        * public/WebView.h:
+        * src/WebViewImpl.cpp:
+        (WebKit::WebViewImpl::pageScaleFactor):
+        * src/WebViewImpl.h:
+
 2011-08-12  Sadrul Habib Chowdhury  <sadrul@chromium.org>
 
         Wire gesture tap events, add support for gesture events in the DRT and add a layout test for it.
